@@ -2,15 +2,18 @@ package com.cognizant.healthCareAppointment.security;
 
 import com.cognizant.healthCareAppointment.entity.User;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 
 public class CustomUserDetails implements UserDetails {
 
     private final User user;
+    
 
     public CustomUserDetails(User user) {
         this.user = user;
@@ -20,10 +23,15 @@ public class CustomUserDetails implements UserDetails {
     public User getUser() {
         return user;
     }
+    
+    public String getUserMailId() {
+    	return user.getEmail();     // method implemented for validateToken in JWTUtil
+    }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList(); // --> Add roles here if needed
+        return List.of(new SimpleGrantedAuthority(user.getRole())); 
+        // --> Added roles here of the current user
     }
 
     @Override
